# Rpg-engine

./: CMakeLists.txt  Enemy.cpp  Party.h  README.md  actor.cpp  common.h  creature.h  rpg.sln  rpg.vcxproj  rpg.vcxproj.filters  tileMaps.cpp  tileMaps.h  velocity.cpp
Data/: Actors.json  Enemies.json
Data/Maps/: hyptosis_til-art-batch-2.tsx  hyptosis_tile-art-batch-1.tsx
rpg/: Battle.cpp  Battle.h  Characters.cpp  Characters.h  Enemy.cpp  Enemy.h  Events.cpp  Events.h  Invetory.cpp  Invetory.h  Items.cpp  Party.cpp  actor.cpp  actor.h  creature.h  game.cpp  game.h  main.cpp  move.h  rpg.cbp  rpg.vcxproj  rpg.vcxproj.filters  skills.cpp  skills.h  sprite.cpp  sprite.h  stats.h  tileMapEditor.cpp  tileMapEditor.h  tileMaps.cpp  tileMaps.h  ui.cpp  ui.h
rpg/Data/: Actors.json  Enemies.json
rpg/Data/Maps/: Test_Map.json
src/: Battle.cpp  Battle.h  Characters.cpp  Characters.h  Enemy.cpp  Enemy.h  Events.cpp  Events.h  FindSDL2_ttf.cmake  Invetory.cpp  Invetory.h  Items.h  Party.cpp  Party.h  actor.cpp  actor.h  common.h  creature.h  game.cpp  game.h  move.h  position.h  skills.cpp  skills.h  sprite.cpp  sprite.h  stats.h  tileMaps.cpp  tileMaps.h  ui.cpp  ui.h  velocity.cpp  velocity.h
